Fix vertical alignment of ref-test text field

--- a/app/assets/stylesheets/mv_ref_test.css.scss
+++ b/app/assets/stylesheets/mv_ref_test.css.scss
@@ -30,6 +30,10 @@
     margin-left:1em;
 }
 
+#submit-ref {
+    vertical-align:bottom;
+    margin-bottom:2%;
+}
 
 /* ==================================== */
 /* ==  Reference Test : Right Panel  == */
